<resources>
    <string name="app_name">Pizzeria</string>
    <string name="Contrasenna">Contraseña</string>
    <string name="Usuario">Usuario</string>
    <string name="Sesion">Iniciar Sesion</string>
    <string name="no_registro">¿No estas registrado?</string>
    <string name="registrate">Registrate</string>
    <string name="Recuerdame">Recuerdame</string>
    <string name="web">WEB</string>
    <string name="pepido">Realizar Pedido</string>
    <string name="configuracion">Configuracion</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Colores">Seleccione Color</string>
    <string name="Finalizar">Finalizar</string>
    <string name="Kebab">Kebab</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Volver">Volver</string>
    <string name="Durum">Durum</string>
    <string name="txtEscoger">"Escoge color: "</string>
    <string name="Favorito">Activar Pedido Favorito</string>
    <string name="Guardar">Guardar</string>
    <string name="Email">Email</string>
    <string name="Salsas">Salsas</string>
    <string name="Salsa_Yogurt">Yogurt</string>
    <string name="Salsa_Picante">Picante</string>
    <string name="Ambas">Ambas</string>
    <string name="Ninguna">Ninguna</string>
    <string name="Carne">Carne</string>
    <string name="Donner">Donner</string>
    <string name="Plato_Kebab">Plato Kebab</string>
    <string name="Lahmacun">Lahmacun</string>
    <string name="Pollo">Pollo</string>
    <string name="Ternera">Ternera</string>
    <string name="Mixto">Mixto</string>
    <string name="Falafel">Falafel</string>
    <string name="Verduras">Verduras</string>
    <string name="Extras">Extras</string>
    <string name="Lechuga">Lechuga</string>
    <string name="Tomate">Tomate</string>
    <string name="Cebolla">Cebolla</string>
    <string name="Col">Col</string>
    <string name="Maiz">Maiz</string>
    <string name="Aceitunas">Aceitunas</string>
    <string name="Mozzarella">Mozzarella</string>
    <string name="Feta">Queso feta</string>
    <string name="Patatas">Patatas</string>
    <string name="Extra_Carne">Extra de carne</string>
    <string name="Personalizado">Personalizado</string>
    <string name="Favorita">Favorito</string>
    <string name="Casa">De la casa</string>
    <string name="Carrito">Carrito</string>
    <string name="Llamar">Llamar</string>
    <string name="Registro">Registro</string>
    <string name="Usuario_">USUARIO :</string>
    <string name="Huevo">Huevo</string>
    <string name="Precio">Precio :</string>
</resources>