<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitysPedido.PedidoIngredientes">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="140dp"
        android:text="@string/Verduras"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="400dp"
        android:layout_height="225dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/lechuga" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Lechuga"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/tomate" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Tomate"
            app:layout_column="3"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/cebolla" />

        <CheckBox
            android:id="@+id/checkBox13"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Cebolla"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/col" />

        <CheckBox
            android:id="@+id/checkBox14"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Col"
            app:layout_column="3"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/maiz" />

        <CheckBox
            android:id="@+id/checkBox15"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Maiz"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/aceitunas" />

        <CheckBox
            android:id="@+id/checkBox16"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Aceitunas"
            app:layout_column="3"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:text="@string/Extras"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/mozzarella" />

        <CheckBox
            android:id="@+id/checkBox17"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Mozzarella"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/feta" />

        <CheckBox
            android:id="@+id/checkBox18"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Feta"
            app:layout_column="3"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/patatas_fritas" />

        <CheckBox
            android:id="@+id/checkBox19"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Patatas"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/carne_kebab" />

        <CheckBox
            android:id="@+id/checkBox20"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:text="@string/Extra_Carne"
            app:layout_column="3"
            app:layout_row="1"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="773dp" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>