<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitysPedido.MenuPedido">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="238dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/btnPersonalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Personalizado" />

        <Button
            android:id="@+id/btnPredeterminado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Casa" />

        <Button
            android:id="@+id/btnPedirFavorito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Favorita" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>