<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitysPedido.PedidoTipoKebab">

    <com.example.pizzeria.RadioGroupPresonalizado.RadioGridGroup
        android:id="@+id/radioGridGroup"
        android:layout_width="414dp"
        android:layout_height="516dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="197dp"
                android:layout_height="200dp"
                android:src="@drawable/aceitunas_negras"
                app:srcCompat="@drawable/durum" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:src="@drawable/aceitunas_negras"
                app:srcCompat="@drawable/doner_kebab" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/rad1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Durum" />

            <RadioButton
                android:id="@+id/rad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Donner" />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="203dp"
                android:layout_height="200dp"
                android:src="@drawable/aceitunas_negras"
                app:srcCompat="@drawable/plato_kebab" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:src="@drawable/aceitunas_negras"
                app:srcCompat="@drawable/lamacum" />
        </TableRow>

        <TableRow>

            <RadioButton
                android:id="@+id/rad5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Plato Kebab" />

            <RadioButton
                android:id="@+id/rad6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lahmacun" />
        </TableRow>

    </com.example.pizzeria.RadioGroupPresonalizado.RadioGridGroup>

    <Button
        android:id="@+id/btnSiguienteTipoKebab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginBottom="55dp"
        android:text="@string/Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVolverTipoKebab" />

    <Button
        android:id="@+id/btnVolverTipoKebab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="55dp"
        android:text="@string/Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSiguienteTipoKebab"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="414dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSiguienteTipoKebab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_column="0"
            app:layout_row="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="TextView" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="RadioButton" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_column="0"
            app:layout_row="0">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Salsas" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Salsa_Yogurt" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Salsa_Picante" />

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Ambas" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Ninguna" />
            </RadioGroup>
        </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>